force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <displayFormat>ITM-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>