force-app/main/default/objects/Item__c/fields/Borrowable_Days__c.field-meta.xml
<CustomField>
    <fullName>Borrowable_Days__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Borrowable Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>