force-app/main/default/objects/Item__c/fields/Current_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Current_Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>