force-app/main/default/objects/Item__c/fields/Current_Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Current_Borrowers__c</fullName>
    <label>Current Borrowers</label>
    <summaryFilterItems>
        <field>Borrowing_History__c.Status__c</field>
        <operation>equals</operation>
        <value>Borrowed</value>
    </summaryFilterItems>
    <summaryForeignKey>Borrowing_History__c.Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>