force-app/main/default/objects/Item__c/fields/Total_Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowers__c</fullName>
    <label>Total Borrowers</label>
    <summaryForeignKey>Borrowing_History__c.Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>