force-app/main/default/objects/Item__c/recordTypes/AV_Equipment.recordType-meta.xml
<RecordType>
    <fullName>AV_Equipment</fullName>
    <active>true</active>
    <label>AV Equipment</label>
</RecordType>