force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Borrowable_Days__c</columns>
    <columns>Current_Borrower__c</columns>
    <columns>Total_Borrowers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>