force-app/main/default/objects/Item__c/listViews/All_AV_Equipments.listView-meta.xml
<ListView>
    <fullName>All_AV_Equipments</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Borrowable_Days__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Borrower__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Item__c.AV_Equipment</value>
    </filters>
    <label>All AV Equipments</label>
</ListView>