force-app/main/default/objects/Item__c/listViews/All_Books.listView-meta.xml
<ListView>
    <fullName>All_Books</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Author__c</columns>
    <columns>Borrowable_Days__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Borrower__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Item__c.Book</value>
    </filters>
    <label>All Books</label>
</ListView>