force-app/main/default/objects/Item__c/listViews/Available_Items.listView-meta.xml
<ListView>
    <fullName>Available_Items</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Borrowable_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Items</label>
</ListView>