force-app/main/default/objects/Item__c/listViews/Borrowed_Items.listView-meta.xml
<ListView>
    <fullName>Borrowed_Items</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Current_Borrower__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Borrowed</value>
    </filters>
    <label>Borrowed Items</label>
</ListView>